Added Javadoc comments. Minor refactoring.